<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:fontFamily="@font/monserrat_bold"
        android:layout_centerHorizontal="true"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="30sp"
        >
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:backgroundTint="@color/colorPrimary"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boxUsername">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:backgroundTint="@color/colorPrimary"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxNik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boxNama">
        <EditText
            android:id="@+id/nik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nik"
            android:inputType="number"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:backgroundTint="@color/colorPrimary"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boxPassword">
        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:backgroundTint="@color/colorPrimary"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxTelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boxNik">
        <EditText
            android:id="@+id/telp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telp"
            android:inputType="number"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:backgroundTint="@color/colorPrimary"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boxTelp"
        android:layout_marginTop="40sp"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:text="@string/register"
        android:textSize="20sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        />

</RelativeLayout>