<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="@font/monserrat_bold"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/subtitle"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="normal"
        android:fontFamily="@font/monserrat_regular"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="30sp"
        >
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boxUsername">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boxPassword"
        android:layout_marginTop="40sp"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:text="@string/login"
        android:textSize="20sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/monserrat_medium"
        />

    <TextView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="20sp"
        android:layout_marginStart="15sp"
        android:textColor="@color/colorPrimary"
        android:text="Do You Have Account ?"
        />
    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/sign"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="20sp"
        android:layout_marginStart="5sp"
        android:textColor="@color/link"
        android:text="Sign Up"
        />
</RelativeLayout>